# tbox

./: .gitignore  Cargo.toml  Makefile  PRODUCT_ROADMAP.md  PRODUCT_ROADMAP_V2.md  README.md  ROADMAP.md  RUST_BACKEND.md  SESSION_SUMMARY.md  package-lock.json  package.json  pnpm-lock.yaml  test_json.json  test_json_format.rs
.github/workflows/: package.yml  release.yml
_bmad-output/implementation-artifacts/: sprint-status.yaml
assets/images/: icon.icns
resources/packaging/macos/: Info.plist  wrapper.sh
resources/packaging/macos/images/: tbox.icns
src/: App.vue  app.rs  main.rs  main.ts  tbox.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  tools.rs  utils2.rs
src-tauri/src/commands/: code.rs  encoding.rs  file.rs  file_ops.rs  image.rs  json.rs  llm.rs  mod.rs  pdf.rs  role.rs  screen.rs  search.rs  tool.rs
src/app/: homepage.rs  json2csv.rs  json2query.rs  message.rs  mod.rs  time.rs  window.rs
src/components/: CodeEditor.vue  CopyButton.vue  JsonNode.vue  JsonViewer.vue  PageHeader.vue  ShortcutHints.vue  SpotlightSearch.vue  Toast.vue
src/components/onboarding/: RoleSelection.vue
src/components/settings/: SettingsModal.vue
src/composables/: useClipboard.ts  useKeyboardShortcuts.ts  useOnlineStatus.ts  useTheme.ts  useToast.ts  useToolShortcuts.ts
src/layout/: Footer.vue  Header.vue  SideBar.vue
src/router/: main.ts
src/stores/: llm.ts  role.ts  search.ts  settings.ts  tools.ts
src/types/: llm.ts  role.ts  tools.ts
src/utils/: pinyin.ts  platform.ts  toast.ts
src/views/: Base64Tool.vue  CodeFormatter.vue  FileRecovery.vue  HashGenerator.vue  HomePage.vue  ImageCompression.vue  JsonTool.vue  NetworkSpeedTest.vue  PDFToolbox.vue  PasswordManage.vue  ScreenRuler.vue  VideoConverter.vue
src/views/tools/: CharsetTools.vue  ColorTools.vue  CoordinateTools.vue  CoordinateVisualizer.vue  CronTools.vue  CsvTools.vue  DatabaseTools.vue  EncodingTools.vue  GmCrypto.vue  HttpRequest.vue  ImageTools.vue  JsonDiff.vue  JsonToEntity.vue  JsonToQuery.vue  JwtTool.vue  LogAnalyzer.vue  NumberTools.vue  QrcodeTools.vue  RegexTester.vue  SqlTools.vue  TextTools.vue  TimestampConverter.vue  UuidTools.vue  XmlTools.vue  YamlTools.vue
