[package]
name = "tbox"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "default_fonts", # 嵌入egui默认字体
    "glow",          # 使用glow渲染
    "persistence",   # 持久化
] }
tracing = "0.1.29"
egui_extras = { version = "0.23.0"}

# 使用serde实现持久化
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


# 发布模式下优化级别
[profile.release]
opt-level = 2

# debug模式下优化级别
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
