[package]
name = "tbox"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.0", features = ["debug", "multi-window"] }
iced_aw = { version = "0.12.0", default-features = false, features = ["badge", "card", "color_picker", "date_picker", "number_input", "selection_list", "tab_bar", "tabs", "time_picker", "menu", "slide_bar", "sidebar"] }
tracing = "0.1.29"

# 使用serde实现持久化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.135"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


# 发布模式下优化级别
[profile.release]
opt-level = 2

# debug模式下优化级别
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
