[package]
name = "tbox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde-xml-rs = "0.6"
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
dirs = "3.0"
reqwest = { version = "0.12.24", features = ["json"] }
image = "0.25"
pdf = "0.9"
lopdf = "0.32"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

# 加密相关
aes = "0.8"
rsa = "0.9"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
jsonwebtoken = "9"
rand = "0.8"

# 国密算法
libsm = "0.6"

# 编码转换
encoding_rs = "0.8"
percent-encoding = "2.3"

# 正则表达式
regex = "1.10"

# 数据库
mysql = "25"
postgres = "0.19"

# CSV处理
csv = "1.3"

# 时间处理
chrono = "0.4"

# UUID
uuid = { version = "1.10", features = ["v4", "v5", "v7", "serde"] }

# 大数计算
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"

# URL编码
urlencoding = "2.1"

# SHA1
sha1 = "0.10"

# MD5（已有md-5）

# 系统信息
os_info = "3"
